2003-11-12  Jackson Harper  <jackson@ximian.com>

	* assembly.c: Change corlib name to mscorlib. Add a temp. hack to
	load corlib.dll if mscorlib.dll is not found.
	* assembly.h: Remove corlib name define.
	* class.c:
	* domain.c:
	* image.c: Change corlib name to mscorlib.
	
2003-11-12  Zoltan Varga  <vargaz@freemail.hu>

	* debug-mono-symfile.c: Add patch from FreeBSD ports tree.

2003-11-11  Miguel de Icaza  <miguel@ximian.com>

	* appdomain.h: Added loader_optimization here to sync with the C#
	code, and add disallow_binding_redirects field.

2003-11-11  Zoltan Varga  <vargaz@freemail.hu>

	* mono-debug.c (mono_debug_add_method): Ignore unknown modules.

	* reflection.c (mono_image_build_metadata): Fix crash on modules
	with no types.

	* reflection.h (MonoMethodInfo): Track changes to the managed structure.

	* icall.c (ves_icall_get_method_info): Return callingConvention as
	well.

	* icall.c (ves_icall_System_Reflection_Assembly_GetNamespaces): Add 
	namespaces from the EXPORTEDTYPE table as well.

	* icall.c (ves_icall_System_Reflection_Assembly_GetTypes): Merge types
	from all modules inside the assembly.
	
2003-11-11  Martin Baulig  <martin@ximian.com>

	* reflection.c (mono_reflection_bind_generic_parameters): Make
	this work for interfaces.

2003-11-11  Martin Baulig  <martin@ximian.com>

	* mono-debug.c (mono_debug_add_type): Ignore unknown modules.

2003-11-11  Martin Baulig  <martin@ximian.com>

	* reflection.c (mono_reflection_inflate_method_or_ctor): Allow
	"MonoInflatedMethod" and "MonoInflatedCtor".

2003-11-11  Zoltan Varga  <vargaz@freemail.hu>

	* reflection.c (resolution_scope_from_image): Use the assembly table
	from the manifest module, since other modules don't have it.

	* debug-helpers.c (mono_type_full_name): New helper function.

	* image.h (MonoAssembly): Change 'dynamic' to a boolean.

	* image.c (mono_image_load_file_for_image): New public function which
	is a replacement for the load_file_for_image in class.c.
